vaultwarden/02-vaultwarden-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vaultwarden
  name: vaultwarden
  namespace: vaultwarden
spec:
  ports:
    - port: 80
  selector:
    app: vaultwarden
