vaultwarden/03-vaultwarden-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-ingress
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vw.home.bakatrouble.me`)
      services:
        - kind: Service
          name: vaultwarden
          namespace: vaultwarden
          port: 80
  tls: {}
